--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(font)
 export(geom_bracket)
 export(geom_exec)
 export(geom_signif)
+export(get_breaks)
 export(get_legend)
 export(get_palette)
 export(get_summary_stats)
