New errorbar functions added: median_hilow_() and median_q1q3() #209

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,8 +64,10 @@ export(mean_ci)
 export(mean_range)
 export(mean_sd)
 export(mean_se_)
+export(median_hilow_)
 export(median_iqr)
 export(median_mad)
+export(median_q1q3)
 export(median_range)
 export(mutate)
 export(rotate)
