--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(clean_theme)
 export(colnames_style)
 export(color_palette)
 export(compare_means)
+export(create_aes)
 export(desc_statby)
 export(facet)
 export(fill_palette)
