--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,10 +91,18 @@ export(stat_overlay_normal_density)
 export(stat_pvalue_manual)
 export(stat_regline_equation)
 export(stat_stars)
+export(tab_add_border)
+export(tab_add_hline)
+export(tab_add_vline)
+export(tab_cell_crossout)
+export(tab_ncol)
+export(tab_nrow)
 export(table_cell_bg)
 export(table_cell_font)
+export(tbody_add_border)
 export(tbody_style)
 export(text_grob)
+export(thead_add_border)
 export(theme_classic2)
 export(theme_cleveland)
 export(theme_pubclean)
