--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,7 +92,9 @@ export(stat_pvalue_manual)
 export(stat_regline_equation)
 export(stat_stars)
 export(tab_add_border)
+export(tab_add_footnote)
 export(tab_add_hline)
+export(tab_add_title)
 export(tab_add_vline)
 export(tab_cell_crossout)
 export(tab_ncol)
