--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(ggpaired)
 export(ggpar)
 export(ggparagraph)
 export(ggpie)
+export(ggpubr_options)
 export(ggqqplot)
 export(ggscatter)
 export(ggscatterhist)
