adding github RCMD check actions

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -5,9 +5,9 @@
 ^\.Rproj\.user$
 ^README\.Rmd$
 ^README-.*\.png$
-^\.travis\.yml$
 ^cran-comments\.md$
 ^docs$
 ^images$
 ^_pkgdown\.yml$
 ^TODO\.Rmd$
+^\.github$
