--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(get_legend)
 export(get_palette)
 export(get_summary_stats)
 export(ggadd)
+export(ggadjust_pvalue)
 export(ggarrange)
 export(ggballoonplot)
 export(ggbarplot)
