--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     rlang (>= 0.4.6),
     rstatix (>= 0.7.2),
     tibble,
-    magrittr
+    magrittr,
+    Metrics
 Suggests:
     grDevices,
     knitr,
