doc prepared for CRAN submission

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,7 +1,7 @@
 templates:
   params:
     bootswatch: lumen
-    ganalytics: UA-54921687-5
+    ganalytics: G-62JB5GM9C4
     docsearch:
       api_key: 6417dc1a4a7896d9002b8ad567f92f4c
       index_name: ggpubr
